parser.output
State 58 conflicts: 1 shift/reduce
State 79 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce
State 81 conflicts: 1 shift/reduce
State 82 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Funcs

    2 Funcs: /* empty */
    3      | FuncDecl Funcs

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE Statements RBRACE

    5 RetType: Type
    6        | VOID

    7 Formals: /* empty */
    8        | FormalsList

    9 FormalsList: FormalDecl
   10            | FormalDecl COMMA FormalsList

   11 FormalDecl: Type ID

   12 Statements: Statement
   13           | Statements Statement

   14 Statement: LBRACE Statements RBRACE
   15          | Type ID SC
   16          | Type ID ASSIGN Exp SC
   17          | ID ASSIGN Exp SC
   18          | Call SC
   19          | RETURN SC
   20          | RETURN Exp SC
   21          | IF LPAREN Exp RPAREN Statement
   22          | IF LPAREN Exp RPAREN Statement ELSE Statement
   23          | WHILE LPAREN Exp RPAREN Statement
   24          | BREAK SC
   25          | CONTINUE SC

   26 Call: ID LPAREN ExpList RPAREN
   27     | ID LPAREN RPAREN

   28 ExpList: Exp
   29        | Exp COMMA ExpList

   30 Type: INT
   31     | BYTE
   32     | BOOL

   33 Exp: LPAREN Exp RPAREN
   34    | Exp IF LPAREN Exp RPAREN ELSE Exp
   35    | Exp BINOP_ADD Exp
   36    | Exp BINOP_MUL Exp
   37    | ID
   38    | Call
   39    | NUM
   40    | NUM B
   41    | STRING
   42    | TRUE
   43    | FALSE
   44    | NOT Exp
   45    | Exp AND Exp
   46    | Exp OR Exp
   47    | Exp RELOP Exp
   48    | Exp EQUALITY Exp
   49    | LPAREN Type RPAREN Exp


Terminals, with rules where they appear

$end (0) 0
error (256)
VOID (258) 6
INT (259) 30
BYTE (260) 31
B (261) 40
BOOL (262) 32
TRUE (263) 42
FALSE (264) 43
RETURN (265) 19 20
IF (266) 21 22 34
WHILE (267) 23
BREAK (268) 24
CONTINUE (269) 25
SC (270) 15 16 17 18 19 20 24 25
COMMA (271) 10 29
LPAREN (272) 4 21 22 23 26 27 33 34 49
LBRACE (273) 4 14
RBRACE (274) 4 14
ID (275) 4 11 15 16 17 26 27 37
NUM (276) 39 40
STRING (277) 41
OR (278) 46
AND (279) 45
ASSIGN (280) 16 17
EQUALITY (281) 48
RELOP (282) 47
BINOP_ADD (283) 35
BINOP_MUL (284) 36
NOT (285) 44
RPAREN (286) 4 21 22 23 26 27 33 34 49
ELSE (287) 22 34


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
Funcs (35)
    on left: 2 3, on right: 1 3
FuncDecl (36)
    on left: 4, on right: 3
RetType (37)
    on left: 5 6, on right: 4
Formals (38)
    on left: 7 8, on right: 4
FormalsList (39)
    on left: 9 10, on right: 8 10
FormalDecl (40)
    on left: 11, on right: 9 10
Statements (41)
    on left: 12 13, on right: 4 13 14
Statement (42)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25, on right: 12 13 21
    22 23
Call (43)
    on left: 26 27, on right: 18 38
ExpList (44)
    on left: 28 29, on right: 26 29
Type (45)
    on left: 30 31 32, on right: 5 11 15 16 49
Exp (46)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49,
    on right: 16 17 20 21 22 23 28 29 33 34 35 36 44 45 46 47 48 49


state 0

    0 $accept: . Program $end
    1 Program: . Funcs
    2 Funcs: .  [$end]
    3      | . FuncDecl Funcs
    4 FuncDecl: . RetType ID LPAREN Formals RPAREN LBRACE Statements RBRACE
    5 RetType: . Type
    6        | . VOID
   30 Type: . INT
   31     | . BYTE
   32     | . BOOL

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Program   go to state 5
    Funcs     go to state 6
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


state 1

    6 RetType: VOID .

    $default  reduce using rule 6 (RetType)


state 2

   30 Type: INT .

    $default  reduce using rule 30 (Type)


state 3

   31 Type: BYTE .

    $default  reduce using rule 31 (Type)


state 4

   32 Type: BOOL .

    $default  reduce using rule 32 (Type)


state 5

    0 $accept: Program . $end

    $end  shift, and go to state 10


state 6

    1 Program: Funcs .

    $default  reduce using rule 1 (Program)


state 7

    2 Funcs: .  [$end]
    3      | . FuncDecl Funcs
    3      | FuncDecl . Funcs
    4 FuncDecl: . RetType ID LPAREN Formals RPAREN LBRACE Statements RBRACE
    5 RetType: . Type
    6        | . VOID
   30 Type: . INT
   31     | . BYTE
   32     | . BOOL

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 2 (Funcs)

    Funcs     go to state 11
    FuncDecl  go to state 7
    RetType   go to state 8
    Type      go to state 9


state 8

    4 FuncDecl: RetType . ID LPAREN Formals RPAREN LBRACE Statements RBRACE

    ID  shift, and go to state 12


state 9

    5 RetType: Type .

    $default  reduce using rule 5 (RetType)


state 10

    0 $accept: Program $end .

    $default  accept


state 11

    3 Funcs: FuncDecl Funcs .

    $default  reduce using rule 3 (Funcs)


state 12

    4 FuncDecl: RetType ID . LPAREN Formals RPAREN LBRACE Statements RBRACE

    LPAREN  shift, and go to state 13


state 13

    4 FuncDecl: RetType ID LPAREN . Formals RPAREN LBRACE Statements RBRACE
    7 Formals: .  [RPAREN]
    8        | . FormalsList
    9 FormalsList: . FormalDecl
   10            | . FormalDecl COMMA FormalsList
   11 FormalDecl: . Type ID
   30 Type: . INT
   31     | . BYTE
   32     | . BOOL

    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    $default  reduce using rule 7 (Formals)

    Formals      go to state 14
    FormalsList  go to state 15
    FormalDecl   go to state 16
    Type         go to state 17


state 14

    4 FuncDecl: RetType ID LPAREN Formals . RPAREN LBRACE Statements RBRACE

    RPAREN  shift, and go to state 18


state 15

    8 Formals: FormalsList .

    $default  reduce using rule 8 (Formals)


state 16

    9 FormalsList: FormalDecl .  [RPAREN]
   10            | FormalDecl . COMMA FormalsList

    COMMA  shift, and go to state 19

    $default  reduce using rule 9 (FormalsList)


state 17

   11 FormalDecl: Type . ID

    ID  shift, and go to state 20


state 18

    4 FuncDecl: RetType ID LPAREN Formals RPAREN . LBRACE Statements RBRACE

    LBRACE  shift, and go to state 21


state 19

    9 FormalsList: . FormalDecl
   10            | . FormalDecl COMMA FormalsList
   10            | FormalDecl COMMA . FormalsList
   11 FormalDecl: . Type ID
   30 Type: . INT
   31     | . BYTE
   32     | . BOOL

    INT   shift, and go to state 2
    BYTE  shift, and go to state 3
    BOOL  shift, and go to state 4

    FormalsList  go to state 22
    FormalDecl   go to state 16
    Type         go to state 17


state 20

   11 FormalDecl: Type ID .

    $default  reduce using rule 11 (FormalDecl)


state 21

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE . Statements RBRACE
   12 Statements: . Statement
   13           | . Statements Statement
   14 Statement: . LBRACE Statements RBRACE
   15          | . Type ID SC
   16          | . Type ID ASSIGN Exp SC
   17          | . ID ASSIGN Exp SC
   18          | . Call SC
   19          | . RETURN SC
   20          | . RETURN Exp SC
   21          | . IF LPAREN Exp RPAREN Statement
   22          | . IF LPAREN Exp RPAREN Statement ELSE Statement
   23          | . WHILE LPAREN Exp RPAREN Statement
   24          | . BREAK SC
   25          | . CONTINUE SC
   26 Call: . ID LPAREN ExpList RPAREN
   27     | . ID LPAREN RPAREN
   30 Type: . INT
   31     | . BYTE
   32     | . BOOL

    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4
    RETURN    shift, and go to state 23
    IF        shift, and go to state 24
    WHILE     shift, and go to state 25
    BREAK     shift, and go to state 26
    CONTINUE  shift, and go to state 27
    LBRACE    shift, and go to state 28
    ID        shift, and go to state 29

    Statements  go to state 30
    Statement   go to state 31
    Call        go to state 32
    Type        go to state 33


state 22

   10 FormalsList: FormalDecl COMMA FormalsList .

    $default  reduce using rule 10 (FormalsList)


state 23

   19 Statement: RETURN . SC
   20          | RETURN . Exp SC
   26 Call: . ID LPAREN ExpList RPAREN
   27     | . ID LPAREN RPAREN
   33 Exp: . LPAREN Exp RPAREN
   34    | . Exp IF LPAREN Exp RPAREN ELSE Exp
   35    | . Exp BINOP_ADD Exp
   36    | . Exp BINOP_MUL Exp
   37    | . ID
   38    | . Call
   39    | . NUM
   40    | . NUM B
   41    | . STRING
   42    | . TRUE
   43    | . FALSE
   44    | . NOT Exp
   45    | . Exp AND Exp
   46    | . Exp OR Exp
   47    | . Exp RELOP Exp
   48    | . Exp EQUALITY Exp
   49    | . LPAREN Type RPAREN Exp

    TRUE    shift, and go to state 34
    FALSE   shift, and go to state 35
    SC      shift, and go to state 36
    LPAREN  shift, and go to state 37
    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    STRING  shift, and go to state 40
    NOT     shift, and go to state 41

    Call  go to state 42
    Exp   go to state 43


state 24

   21 Statement: IF . LPAREN Exp RPAREN Statement
   22          | IF . LPAREN Exp RPAREN Statement ELSE Statement

    LPAREN  shift, and go to state 44


state 25

   23 Statement: WHILE . LPAREN Exp RPAREN Statement

    LPAREN  shift, and go to state 45


state 26

   24 Statement: BREAK . SC

    SC  shift, and go to state 46


state 27

   25 Statement: CONTINUE . SC

    SC  shift, and go to state 47


state 28

   12 Statements: . Statement
   13           | . Statements Statement
   14 Statement: . LBRACE Statements RBRACE
   14          | LBRACE . Statements RBRACE
   15          | . Type ID SC
   16          | . Type ID ASSIGN Exp SC
   17          | . ID ASSIGN Exp SC
   18          | . Call SC
   19          | . RETURN SC
   20          | . RETURN Exp SC
   21          | . IF LPAREN Exp RPAREN Statement
   22          | . IF LPAREN Exp RPAREN Statement ELSE Statement
   23          | . WHILE LPAREN Exp RPAREN Statement
   24          | . BREAK SC
   25          | . CONTINUE SC
   26 Call: . ID LPAREN ExpList RPAREN
   27     | . ID LPAREN RPAREN
   30 Type: . INT
   31     | . BYTE
   32     | . BOOL

    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4
    RETURN    shift, and go to state 23
    IF        shift, and go to state 24
    WHILE     shift, and go to state 25
    BREAK     shift, and go to state 26
    CONTINUE  shift, and go to state 27
    LBRACE    shift, and go to state 28
    ID        shift, and go to state 29

    Statements  go to state 48
    Statement   go to state 31
    Call        go to state 32
    Type        go to state 33


state 29

   17 Statement: ID . ASSIGN Exp SC
   26 Call: ID . LPAREN ExpList RPAREN
   27     | ID . LPAREN RPAREN

    LPAREN  shift, and go to state 49
    ASSIGN  shift, and go to state 50


state 30

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE Statements . RBRACE
   13 Statements: Statements . Statement
   14 Statement: . LBRACE Statements RBRACE
   15          | . Type ID SC
   16          | . Type ID ASSIGN Exp SC
   17          | . ID ASSIGN Exp SC
   18          | . Call SC
   19          | . RETURN SC
   20          | . RETURN Exp SC
   21          | . IF LPAREN Exp RPAREN Statement
   22          | . IF LPAREN Exp RPAREN Statement ELSE Statement
   23          | . WHILE LPAREN Exp RPAREN Statement
   24          | . BREAK SC
   25          | . CONTINUE SC
   26 Call: . ID LPAREN ExpList RPAREN
   27     | . ID LPAREN RPAREN
   30 Type: . INT
   31     | . BYTE
   32     | . BOOL

    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4
    RETURN    shift, and go to state 23
    IF        shift, and go to state 24
    WHILE     shift, and go to state 25
    BREAK     shift, and go to state 26
    CONTINUE  shift, and go to state 27
    LBRACE    shift, and go to state 28
    RBRACE    shift, and go to state 51
    ID        shift, and go to state 29

    Statement  go to state 52
    Call       go to state 32
    Type       go to state 33


state 31

   12 Statements: Statement .

    $default  reduce using rule 12 (Statements)


state 32

   18 Statement: Call . SC

    SC  shift, and go to state 53


state 33

   15 Statement: Type . ID SC
   16          | Type . ID ASSIGN Exp SC

    ID  shift, and go to state 54


state 34

   42 Exp: TRUE .

    $default  reduce using rule 42 (Exp)


state 35

   43 Exp: FALSE .

    $default  reduce using rule 43 (Exp)


state 36

   19 Statement: RETURN SC .

    $default  reduce using rule 19 (Statement)


state 37

   26 Call: . ID LPAREN ExpList RPAREN
   27     | . ID LPAREN RPAREN
   30 Type: . INT
   31     | . BYTE
   32     | . BOOL
   33 Exp: . LPAREN Exp RPAREN
   33    | LPAREN . Exp RPAREN
   34    | . Exp IF LPAREN Exp RPAREN ELSE Exp
   35    | . Exp BINOP_ADD Exp
   36    | . Exp BINOP_MUL Exp
   37    | . ID
   38    | . Call
   39    | . NUM
   40    | . NUM B
   41    | . STRING
   42    | . TRUE
   43    | . FALSE
   44    | . NOT Exp
   45    | . Exp AND Exp
   46    | . Exp OR Exp
   47    | . Exp RELOP Exp
   48    | . Exp EQUALITY Exp
   49    | . LPAREN Type RPAREN Exp
   49    | LPAREN . Type RPAREN Exp

    INT     shift, and go to state 2
    BYTE    shift, and go to state 3
    BOOL    shift, and go to state 4
    TRUE    shift, and go to state 34
    FALSE   shift, and go to state 35
    LPAREN  shift, and go to state 37
    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    STRING  shift, and go to state 40
    NOT     shift, and go to state 41

    Call  go to state 42
    Type  go to state 55
    Exp   go to state 56


state 38

   26 Call: ID . LPAREN ExpList RPAREN
   27     | ID . LPAREN RPAREN
   37 Exp: ID .  [IF, SC, COMMA, OR, AND, EQUALITY, RELOP, BINOP_ADD, BINOP_MUL, RPAREN]

    LPAREN  shift, and go to state 49

    $default  reduce using rule 37 (Exp)


state 39

   39 Exp: NUM .  [IF, SC, COMMA, OR, AND, EQUALITY, RELOP, BINOP_ADD, BINOP_MUL, RPAREN]
   40    | NUM . B

    B  shift, and go to state 57

    $default  reduce using rule 39 (Exp)


state 40

   41 Exp: STRING .

    $default  reduce using rule 41 (Exp)


state 41

   26 Call: . ID LPAREN ExpList RPAREN
   27     | . ID LPAREN RPAREN
   33 Exp: . LPAREN Exp RPAREN
   34    | . Exp IF LPAREN Exp RPAREN ELSE Exp
   35    | . Exp BINOP_ADD Exp
   36    | . Exp BINOP_MUL Exp
   37    | . ID
   38    | . Call
   39    | . NUM
   40    | . NUM B
   41    | . STRING
   42    | . TRUE
   43    | . FALSE
   44    | . NOT Exp
   44    | NOT . Exp
   45    | . Exp AND Exp
   46    | . Exp OR Exp
   47    | . Exp RELOP Exp
   48    | . Exp EQUALITY Exp
   49    | . LPAREN Type RPAREN Exp

    TRUE    shift, and go to state 34
    FALSE   shift, and go to state 35
    LPAREN  shift, and go to state 37
    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    STRING  shift, and go to state 40
    NOT     shift, and go to state 41

    Call  go to state 42
    Exp   go to state 58


state 42

   38 Exp: Call .

    $default  reduce using rule 38 (Exp)


state 43

   20 Statement: RETURN Exp . SC
   34 Exp: Exp . IF LPAREN Exp RPAREN ELSE Exp
   35    | Exp . BINOP_ADD Exp
   36    | Exp . BINOP_MUL Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . EQUALITY Exp

    IF         shift, and go to state 59
    SC         shift, and go to state 60
    OR         shift, and go to state 61
    AND        shift, and go to state 62
    EQUALITY   shift, and go to state 63
    RELOP      shift, and go to state 64
    BINOP_ADD  shift, and go to state 65
    BINOP_MUL  shift, and go to state 66


state 44

   21 Statement: IF LPAREN . Exp RPAREN Statement
   22          | IF LPAREN . Exp RPAREN Statement ELSE Statement
   26 Call: . ID LPAREN ExpList RPAREN
   27     | . ID LPAREN RPAREN
   33 Exp: . LPAREN Exp RPAREN
   34    | . Exp IF LPAREN Exp RPAREN ELSE Exp
   35    | . Exp BINOP_ADD Exp
   36    | . Exp BINOP_MUL Exp
   37    | . ID
   38    | . Call
   39    | . NUM
   40    | . NUM B
   41    | . STRING
   42    | . TRUE
   43    | . FALSE
   44    | . NOT Exp
   45    | . Exp AND Exp
   46    | . Exp OR Exp
   47    | . Exp RELOP Exp
   48    | . Exp EQUALITY Exp
   49    | . LPAREN Type RPAREN Exp

    TRUE    shift, and go to state 34
    FALSE   shift, and go to state 35
    LPAREN  shift, and go to state 37
    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    STRING  shift, and go to state 40
    NOT     shift, and go to state 41

    Call  go to state 42
    Exp   go to state 67


state 45

   23 Statement: WHILE LPAREN . Exp RPAREN Statement
   26 Call: . ID LPAREN ExpList RPAREN
   27     | . ID LPAREN RPAREN
   33 Exp: . LPAREN Exp RPAREN
   34    | . Exp IF LPAREN Exp RPAREN ELSE Exp
   35    | . Exp BINOP_ADD Exp
   36    | . Exp BINOP_MUL Exp
   37    | . ID
   38    | . Call
   39    | . NUM
   40    | . NUM B
   41    | . STRING
   42    | . TRUE
   43    | . FALSE
   44    | . NOT Exp
   45    | . Exp AND Exp
   46    | . Exp OR Exp
   47    | . Exp RELOP Exp
   48    | . Exp EQUALITY Exp
   49    | . LPAREN Type RPAREN Exp

    TRUE    shift, and go to state 34
    FALSE   shift, and go to state 35
    LPAREN  shift, and go to state 37
    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    STRING  shift, and go to state 40
    NOT     shift, and go to state 41

    Call  go to state 42
    Exp   go to state 68


state 46

   24 Statement: BREAK SC .

    $default  reduce using rule 24 (Statement)


state 47

   25 Statement: CONTINUE SC .

    $default  reduce using rule 25 (Statement)


state 48

   13 Statements: Statements . Statement
   14 Statement: . LBRACE Statements RBRACE
   14          | LBRACE Statements . RBRACE
   15          | . Type ID SC
   16          | . Type ID ASSIGN Exp SC
   17          | . ID ASSIGN Exp SC
   18          | . Call SC
   19          | . RETURN SC
   20          | . RETURN Exp SC
   21          | . IF LPAREN Exp RPAREN Statement
   22          | . IF LPAREN Exp RPAREN Statement ELSE Statement
   23          | . WHILE LPAREN Exp RPAREN Statement
   24          | . BREAK SC
   25          | . CONTINUE SC
   26 Call: . ID LPAREN ExpList RPAREN
   27     | . ID LPAREN RPAREN
   30 Type: . INT
   31     | . BYTE
   32     | . BOOL

    INT       shift, and go to state 2
    BYTE      shift, and go to state 3
    BOOL      shift, and go to state 4
    RETURN    shift, and go to state 23
    IF        shift, and go to state 24
    WHILE     shift, and go to state 25
    BREAK     shift, and go to state 26
    CONTINUE  shift, and go to state 27
    LBRACE    shift, and go to state 28
    RBRACE    shift, and go to state 69
    ID        shift, and go to state 29

    Statement  go to state 52
    Call       go to state 32
    Type       go to state 33


state 49

   26 Call: . ID LPAREN ExpList RPAREN
   26     | ID LPAREN . ExpList RPAREN
   27     | . ID LPAREN RPAREN
   27     | ID LPAREN . RPAREN
   28 ExpList: . Exp
   29        | . Exp COMMA ExpList
   33 Exp: . LPAREN Exp RPAREN
   34    | . Exp IF LPAREN Exp RPAREN ELSE Exp
   35    | . Exp BINOP_ADD Exp
   36    | . Exp BINOP_MUL Exp
   37    | . ID
   38    | . Call
   39    | . NUM
   40    | . NUM B
   41    | . STRING
   42    | . TRUE
   43    | . FALSE
   44    | . NOT Exp
   45    | . Exp AND Exp
   46    | . Exp OR Exp
   47    | . Exp RELOP Exp
   48    | . Exp EQUALITY Exp
   49    | . LPAREN Type RPAREN Exp

    TRUE    shift, and go to state 34
    FALSE   shift, and go to state 35
    LPAREN  shift, and go to state 37
    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    STRING  shift, and go to state 40
    NOT     shift, and go to state 41
    RPAREN  shift, and go to state 70

    Call     go to state 42
    ExpList  go to state 71
    Exp      go to state 72


state 50

   17 Statement: ID ASSIGN . Exp SC
   26 Call: . ID LPAREN ExpList RPAREN
   27     | . ID LPAREN RPAREN
   33 Exp: . LPAREN Exp RPAREN
   34    | . Exp IF LPAREN Exp RPAREN ELSE Exp
   35    | . Exp BINOP_ADD Exp
   36    | . Exp BINOP_MUL Exp
   37    | . ID
   38    | . Call
   39    | . NUM
   40    | . NUM B
   41    | . STRING
   42    | . TRUE
   43    | . FALSE
   44    | . NOT Exp
   45    | . Exp AND Exp
   46    | . Exp OR Exp
   47    | . Exp RELOP Exp
   48    | . Exp EQUALITY Exp
   49    | . LPAREN Type RPAREN Exp

    TRUE    shift, and go to state 34
    FALSE   shift, and go to state 35
    LPAREN  shift, and go to state 37
    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    STRING  shift, and go to state 40
    NOT     shift, and go to state 41

    Call  go to state 42
    Exp   go to state 73


state 51

    4 FuncDecl: RetType ID LPAREN Formals RPAREN LBRACE Statements RBRACE .

    $default  reduce using rule 4 (FuncDecl)


state 52

   13 Statements: Statements Statement .

    $default  reduce using rule 13 (Statements)


state 53

   18 Statement: Call SC .

    $default  reduce using rule 18 (Statement)


state 54

   15 Statement: Type ID . SC
   16          | Type ID . ASSIGN Exp SC

    SC      shift, and go to state 74
    ASSIGN  shift, and go to state 75


state 55

   49 Exp: LPAREN Type . RPAREN Exp

    RPAREN  shift, and go to state 76


state 56

   33 Exp: LPAREN Exp . RPAREN
   34    | Exp . IF LPAREN Exp RPAREN ELSE Exp
   35    | Exp . BINOP_ADD Exp
   36    | Exp . BINOP_MUL Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . EQUALITY Exp

    IF         shift, and go to state 59
    OR         shift, and go to state 61
    AND        shift, and go to state 62
    EQUALITY   shift, and go to state 63
    RELOP      shift, and go to state 64
    BINOP_ADD  shift, and go to state 65
    BINOP_MUL  shift, and go to state 66
    RPAREN     shift, and go to state 77


state 57

   40 Exp: NUM B .

    $default  reduce using rule 40 (Exp)


state 58

   34 Exp: Exp . IF LPAREN Exp RPAREN ELSE Exp
   35    | Exp . BINOP_ADD Exp
   36    | Exp . BINOP_MUL Exp
   44    | NOT Exp .  [IF, SC, COMMA, OR, AND, EQUALITY, RELOP, BINOP_ADD, BINOP_MUL, RPAREN]
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . EQUALITY Exp

    IF  shift, and go to state 59

    IF        [reduce using rule 44 (Exp)]
    $default  reduce using rule 44 (Exp)

    Conflict between rule 44 and token OR resolved as reduce (OR < NOT).
    Conflict between rule 44 and token AND resolved as reduce (AND < NOT).
    Conflict between rule 44 and token EQUALITY resolved as reduce (EQUALITY < NOT).
    Conflict between rule 44 and token RELOP resolved as reduce (RELOP < NOT).
    Conflict between rule 44 and token BINOP_ADD resolved as reduce (BINOP_ADD < NOT).
    Conflict between rule 44 and token BINOP_MUL resolved as reduce (BINOP_MUL < NOT).


state 59

   34 Exp: Exp IF . LPAREN Exp RPAREN ELSE Exp

    LPAREN  shift, and go to state 78


state 60

   20 Statement: RETURN Exp SC .

    $default  reduce using rule 20 (Statement)


state 61
